Реализация технического задания 12 спринта